--- a/DM/Lab2.ipynb
+++ b/DM/Lab2.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<center><b><h1>Data Mining</b></center>\n",
+    "<center><b><h1>Lab - 2</b></center>\n",
+    "<center><b><h1>23010101191 | Meet Parmar | 04-06-2025</b></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Data Mining - Lab - 2\n",
     "\n",
     "#  Numpy  &  Perform Data Exploration with Pandas"
